JDK-7172388 : G1: _total_full_collections should not be incremented for concurrent cycles
  • Type: Bug
  • Component: hotspot
  • Sub-Component: gc
  • Affected Version: hs24
  • Priority: P4
  • Status: Resolved
  • Resolution: Fixed
  • OS: generic
  • CPU: generic
  • Submitted: 2012-05-29
  • Updated: 2013-09-18
  • Resolved: 2012-06-16
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Fixed 8Fixed hs24Fixed
Description
Currently G1 increments the CollectedHeap::_total_full_collections not just for full GCs but also for concurrnent marking cycles.

This means that users of CollectedHeap::total_full_collections() will get the number of full GCs + the number of concurrent makring cycles that have happened. Other collectors only count full GCs when incrementing _total_full_collections.

Comments
EVALUATION http://hg.openjdk.java.net/lambda/lambda/hotspot/rev/37552638d24a
29-06-2012

EVALUATION http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/37552638d24a
06-06-2012