7172388: G1: _total_full_collections should not be incremented for concurrent cycles

Reviewed-by: azeemj, jmasa